--- a/patient-monitoring-backend/UserService/appsettings.json
+++ b/patient-monitoring-backend/UserService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ADITHYA\\SQLEXPRESS;Database=UsersDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
